madeby: v1.7.3.7 upload to svn

--- a/madeby/default.css
+++ b/madeby/default.css
@@ -15,8 +15,7 @@
  *
  ******************************/
 
-
-.difficulty_1:visited {
+.difficulty_1.visited {
 	color: #CCCCCC
 }
 .difficulty_1:link    {
