--- a/armorysync/templates/status_head.html
+++ b/armorysync/templates/status_head.html
@@ -2,7 +2,7 @@
 
 <!-- ArmorySync Status Head -->
 
-<form name="linker" action="{LINK}" method="POST">
+<form name="linker" action="{LINK}" method="post">
         <input type="hidden" name="job_id" value="{JOB_ID}" />
         <input type="hidden" name="StatusHidden" value="{STATUSHIDDEN}" />
 </form>
@@ -10,25 +10,26 @@
 
 {START_BORDER}
 <div class="header_text {STYLE}border">
-<table align="center" width="100%">
+<table align="center" width="100%" cellspacing="0" cellpadding="0">
     <tr>
-	<td width=33% align="center">{NEXT}</td>
-	<td width=33% align="center">{TITLE}</td>
-	<td width=33% align="right">
-		{PROGRESSBAR}
-                
-	</td>
+		<td width="33%" align="center">{NEXT}</td>
+		<td width="33%" align="center">{TITLE}</td>
+		<td width="33%" align="right">
+			{PROGRESSBAR}
+		</td>
     </tr>
 </table>
 </div>
 
-<img src="{ICON}" style="float:right;cursor:pointer;" alt="" id="update_details_img" onclick="toggleStatus();">
-<br>
+<img src="{ICON}" style="float:right;cursor:pointer;" alt="" id="update_details_img" onclick="toggleStatus();" />
+<br />
 <div id="update_details" style="display:{DISPLAY};">
-<table class="bodyline" cellspacing="0" align="center">
+<table class="bodyline" cellspacing="0" cellpadding="0" align="center">
 	<tr>
 		<td>
-			<table class="border_frame">
+			<table class="border_frame" cellspacing="0" cellpadding="0">
+				<tr>
 <!-- BEGIN head_col -->
-				<th class="membersHeader ts_string">{head_col.HEAD_TITLE}</th>
+					<th class="membersHeader ts_string">{head_col.HEAD_TITLE}</th>
 <!-- END head_col -->
+				</tr>
