--- a/trunk/armorysync/templates/status_head.html
+++ b/trunk/armorysync/templates/status_head.html
@@ -2,6 +2,9 @@
 
 <!-- ArmorySync Status Head -->
 
+<div style="height:1px; width:1px; overflow:visible;">
+<img src="{IMAGE_PATH}/as_logo.png" style="position: relative; left:420px; bottom:125px; height:250px;">
+</div>
 <form name="linker" action="{LINK}" method="post">
         <input type="hidden" name="job_id" value="{JOB_ID}" />
         <input type="hidden" name="StatusHidden" value="{STATUSHIDDEN}" />
@@ -12,17 +15,17 @@
 <div class="header_text {STYLE}border">
 <table align="center" width="100%" cellspacing="0" cellpadding="0">
     <tr>
-		<td width="33%" align="center">{NEXT}</td>
-		<td width="33%" align="center">{TITLE}</td>
-		<td width="33%" align="right">
-			{PROGRESSBAR}
-		</td>
+	<td id="progress_next" width="33%" align="center">{NEXT}</td>
+	<td id="progress_title" width="33%" align="center">{TITLE}</td>
+	<td width="33%" align="right">
+		{PROGRESSBAR}
+	</td>
     </tr>
 </table>
 </div>
 
-<img src="{ICON}" style="float:right;cursor:pointer;" alt="" id="update_details_img" onclick="toggleStatus();" />
-<br />
+<img src="{ICON}" style="float:right;cursor:pointer;" alt="" id="update_details_img" onclick="toggleStatus();" >
+<br>
 <div id="update_details" style="display:{DISPLAY};">
 <table class="bodyline" cellspacing="0" cellpadding="0" align="center">
 	<tr>
