--- a/trunk/armorysync/templates/footer.html
+++ b/trunk/armorysync/templates/footer.html
@@ -1,6 +1,9 @@
 <!-- $Id$ -->
 
 <!-- ArmorySync Footer -->
+<div style="height:1px; width:1px; overflow:visible;">
+        <img src="{IMAGE_PATH}/poetter_avatar.png" style="position: relative; right:350px; top:25px; height:60px;">
+</div>
 <br />
 <hr />
 <small>ArmorySync v{ARMORYSYNC_VERSION}</small>
