--- a/armorysync/templates/status_head.html
+++ b/armorysync/templates/status_head.html
@@ -2,14 +2,12 @@
 
 <!-- ArmorySync Status Head -->
 
-<div style="height:1px; width:1px; overflow:visible;">
-        <!-- IF PICLOGO -->
-        <img src="{IMAGE_PATH}/as_logo.png" style="position: relative; left:410px; bottom:150px; height:250px;" alt="" />
-        <!-- ENDIF -->
-</div>
 <form name="linker" action="{LINK}" method="post">
         <input type="hidden" name="job_id" value="{JOB_ID}" />
         <input type="hidden" name="StatusHidden" value="{STATUSHIDDEN}" />
+		<!-- IF DEBUG neq "" -->
+		{DEBUG}
+		<!-- ENDIF -->
 </form>
 
 
@@ -29,17 +27,35 @@
 <img src="{ICON}" style="float:right;cursor:pointer;" id="update_details_img" onclick="toggleStatus();" alt="" />
 <br />
 <div id="update_details"<!-- IF DISPLAY neq "" --> style="display:{DISPLAY};"<!-- ENDIF -->>
-	<div style="height:1px; width:1px; overflow:visible;">
-		<!-- IF PIC1 -->
-		<img src="{IMAGE_PATH}/as_pic1.png" style="position: relative; right:120px; top:150px; height:250px;" alt="" />
-		<!-- ENDIF -->
-		<!-- IF PIC2 -->
-		<img src="{IMAGE_PATH}/as_pic2.png" style="position: relative; left:800px; top:400px; height:250px;" alt="" />
-		<!-- ENDIF -->
-		<!-- IF PIC3 -->
-		<img src="{IMAGE_PATH}/as_pic3.png" style="position: relative; right:150px; top:650px; height:250px;" alt="" />
-		<!-- ENDIF -->
-	</div>
+	<!-- IF SHOW_PIC_TABLE neq "" -->
+	<table cellspacing="0" cellpadding="0">
+		<tr>
+	<!-- ENDIF -->
+	<!-- IF PIC1_SHOW neq "" -->
+			<td>
+				<div style="height:1px; width:0px; overflow:visible;">
+					<img src="{IMAGE_PATH}/as_pic1.png" id="armorysync_pic1" style="position: relative; left:{PIC1_LEFT}px; top:{PIC1_TOP}px; height:{PIC1_HIGHT}px;" <!-- IF USE_EFFECTS neq "" -->onmouseover="new Effect.Fade(this); window.setTimeout('Effect.Appear(\'armorysync_pic1\', {duration:.3})',2500);"<!-- ENDIF --> alt="" />
+				</div>
+			</td>
+	<!-- ENDIF -->
+	<!-- IF PIC2_SHOW neq "" -->
+			<td>
+				<div style="height:1px; width:0px; overflow:visible;">
+					<img src="{IMAGE_PATH}/as_pic2.png" id="armorysync_pic2" style="position: relative; left:{PIC2_LEFT}px; top:{PIC2_TOP}px; height:{PIC2_HIGHT}px;" <!-- IF USE_EFFECTS neq "" -->onmouseover="new Effect.Fade(this); window.setTimeout('Effect.Appear(\'armorysync_pic2\', {duration:.3})',2500);"<!-- ENDIF --> alt="" />
+				</div>
+			</td>
+	<!-- ENDIF -->
+	<!-- IF PIC3_SHOW neq "" -->
+			<td>
+				<div style="height:1px; width:0px; overflow:visible;">
+					<img src="{IMAGE_PATH}/as_pic3.png" id="armorysync_pic3" style="position: relative; left:{PIC3_LEFT}px; top:{PIC3_TOP}px; height:{PIC3_HIGHT}px;" <!-- IF USE_EFFECTS neq "" -->onmouseover="new Effect.Fade(this); window.setTimeout('Effect.Appear(\'armorysync_pic3\', {duration:.3})',2500);"<!-- ENDIF --> alt="" />
+				</div>
+			</td>
+	<!-- ENDIF -->
+	<!-- IF SHOW_PIC_TABLE neq "" -->
+		</tr>
+	</table>
+	<!-- ENDIF -->
 	<table class="bodyline" cellspacing="0" cellpadding="0" align="center">
 		<tr>
 			<td>
