ArmorySync: - implemented base structure for arena updates -- todo: data parsing when roster structure is public

--- a/branches/armorysync/264_go_for_arena/templates/status_body.html
+++ b/branches/armorysync/264_go_for_arena/templates/status_body.html
@@ -15,6 +15,7 @@
 						<td id="as_status_reputation_info_{body_row.ASID}" class="membersRowCell">{body_row.REPUTATION_INFO}</td>
 						<td id="as_status_equipment_info_{body_row.ASID}" class="membersRowCell">{body_row.EQUIPMENT_INFO}</td>
 						<td id="as_status_talent_info_{body_row.ASID}" class="membersRowCell">{body_row.TALENT_INFO}</td>
+						<td id="as_status_arenaTeams_info_{body_row.ASID}" class="membersRowCell">{body_row.ARENATEAMS_INFO}</td>
 						<!-- ENDIF -->
 						<td id="as_status_starttimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STARTTIMEUTC}</td>
 						<td id="as_status_stoptimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STOPTIMEUTC}</td>
