--- a/trunk/armorysync/templates/footer.html
+++ b/trunk/armorysync/templates/footer.html
@@ -97,7 +97,7 @@
         <tr>
             <td colspan="7" class="membersRow{d_row.ROW_CLASS2}">
                 <div style="max-height:300px;max-width:100%;overflow:auto;">
-                    {d__row.ARGS}
+                    {d_row.ARGS}
                 </div>
             </td>
         </tr>
