--- a/trunk/accounts/templates/chars.html
+++ b/trunk/accounts/templates/chars.html
@@ -1,7 +1,6 @@
 <!-- BEGIN accounts_chars -->
 <br />
 {accounts_chars.BORDER_START}
-<br />
-This is the temp Characters page.
+{accounts_chars.CHARS_LIST}
 {accounts_chars.BORDER_END}
 <!-- END accounts_chars -->
