--- a/trunk/accounts/templates/realms.html
+++ b/trunk/accounts/templates/realms.html
@@ -1,7 +1,6 @@
 <!-- BEGIN accounts_realms -->
 <br />
 {accounts_realms.BORDER_START}
-<br />
-This is the temp Realms page.
+{accounts_realms.REALMS_LIST}
 {accounts_realms.BORDER_END}
 <!-- END accounts_realms -->
