Accounts:  - Modified  -- inc/install.def.php  -- inc/login.php  -- inc/update_hook.php  -- inc/user.lib.php  -- templates/chars.html  -- templates/guilds.html  -- templates/realms.html  -- locale/enUS.php  -- index.php
 - Added the character, guild and realm pages scripting
 - Update_hook now gets realm info per character
 - New lang vars added for guild, character, and realm pages
 - Fixed login.php not working with rosterCP
 - Cleaned up some misc. vars

--- a/accounts/templates/chars.html
+++ b/accounts/templates/chars.html
@@ -1,7 +1,6 @@
 <!-- BEGIN accounts_chars -->
 <br />
 {accounts_chars.BORDER_START}
-<br />
-This is the temp Characters page.
+{accounts_chars.CHARS_LIST}
 {accounts_chars.BORDER_END}
 <!-- END accounts_chars -->
