--- a/accounts/templates/guilds.html
+++ b/accounts/templates/guilds.html
@@ -1,8 +1,6 @@
 <!-- BEGIN accounts_guilds -->
 <br />
 {accounts_guilds.BORDER_START}
-<br />
-This is the temp Guilds page.
-<br />
+{accounts_guilds.GUILD_LIST}
 {accounts_guilds.BORDER_END}
 <!-- END accounts_guilds -->
