armorysync: - Fixed small html error

--- a/armorysync/templates/footer.html
+++ b/armorysync/templates/footer.html
@@ -2,7 +2,7 @@
 
 <!-- ArmorySync Footer -->
 <div style="height:1px; width:1px; overflow:visible;">
-        <img src="{IMAGE_PATH}/poetter_avatar.png" style="position: relative; right:350px; top:25px; height:60px;">
+        <img src="{IMAGE_PATH}poetter_avatar.png" style="position: relative; right:350px; top:25px; height:60px;" alt="" />
 </div>
 <br />
 <hr />
