--- a/trunk/accounts/templates/chars.html
+++ b/trunk/accounts/templates/chars.html
@@ -1,5 +1,6 @@
 <!-- BEGIN accounts_chars -->
 <br />
+{accounts_chars.MESSAGE}
 {accounts_chars.BORDER_START}
 {accounts_chars.CHARS_LIST}
 {accounts_chars.BORDER_END}
