--- a/trunk/accounts/templates/guilds.html
+++ b/trunk/accounts/templates/guilds.html
@@ -1,5 +1,6 @@
 <!-- BEGIN accounts_guilds -->
 <br />
+{accounts_guilds.MESSAGE}
 {accounts_guilds.BORDER_START}
 {accounts_guilds.GUILD_LIST}
 {accounts_guilds.BORDER_END}
