--- a/trunk/accounts/templates/login.html
+++ b/trunk/accounts/templates/login.html
@@ -7,7 +7,7 @@
 		</th>
 	</tr>
 	<tr>
-	<form name="accountLogin" method="post" action="{accounts_login.FORM_LINK}">
+	<form action="{accounts_login.FORM_LINK}" method="post" enctype="multipart/form-data" onsubmit="submitonce(this)">
 		<td class="membersRow1">
 			<span style="float:left">{accounts_login.UNAME_TXT}:</span>
 			<span style="float:right"><input type="text" name="user" class="wowinput128"></span>
@@ -16,7 +16,7 @@
 	<tr>
 		<td class="membersRow2">
 			<span style="float:left">{accounts_login.PASS_TXT}:</span>
-			<span style="float:right"><input type="password" name="userPass" class="wowinput128"></span>
+			<span style="float:right"><input type="password" name="password" class="wowinput128"></span>
 		</td>
 	</tr>
 	<tr>
@@ -27,14 +27,13 @@
 	</tr>
 	<tr>
 		<td class="membersHeader">
-			<span style="float:right"><input type="submit" name="Submit" value="{accounts_login.LOGIN_BTTN}"></span>
+			<span style="float:right"><input type="submit" name="submit" value="{accounts_login.LOGIN_BTTN}"></span>
 		</td>
 	</tr>
 	</form>
 </table>
 {accounts_login.BORDER_END}
-<p><b>{accounts_login.MESSAGE}</b></p>
-<p>&nbsp;</p>
-<p>{accounts_login.REGISTER_TXT}&nbsp;<a href="{accounts_login.REGISTER_LINK}">{accounts_login.REGISTER_CLICK}</a></p><br />
+<br />
+<p>{accounts_login.REGISTER_TXT}&nbsp;<a href="{accounts_login.REGISTER_LINK}">{accounts_login.REGISTER_CLICK}</a></p>
 <p><a href="{accounts_login.LOST_LINK}">{accounts_login.LOST_TXT}</a></p>
 <!-- END accounts_login -->
