--- a/trunk/accounts/templates/realms.html
+++ b/trunk/accounts/templates/realms.html
@@ -1,5 +1,6 @@
 <!-- BEGIN accounts_realms -->
 <br />
+{accounts_realms.MESSAGE}
 {accounts_realms.BORDER_START}
 {accounts_realms.REALMS_LIST}
 {accounts_realms.BORDER_END}
