--- a/trunk/accounts/templates/settings.html
+++ b/trunk/accounts/templates/settings.html
@@ -1,7 +1,6 @@
 <!-- BEGIN accounts_settings -->
 <br />
-{accounts_settings.BORDER_START}
-<br />
-This is the temp Settings page.
-{accounts_settings.BORDER_END}
+{accounts_settings.MESSAGE}
+{accounts_settings.MENU}
+{accounts_settings.BODY}
 <!-- END accounts_settings -->
