Accounts:  - Complete restructuring of the framework to a more Object Oriented design.  -- Added an Accounts handler class  -- Added Plug-in framework  -- Moved User functions to accountsUser class  -- Moved Login functions to RosterLogin class  -- Moved Page functions to accountsPage class
 - Added administration options and pages (with menus)
 - Added the workings of integrating the recruitment addon
 - Added user administration
 - Added coding for Memberslist (Modified)

--- a/accounts/templates/chars.html
+++ b/accounts/templates/chars.html
@@ -1,5 +1,6 @@
 <!-- BEGIN accounts_chars -->
 <br />
+{accounts_chars.MESSAGE}
 {accounts_chars.BORDER_START}
 {accounts_chars.CHARS_LIST}
 {accounts_chars.BORDER_END}
