--- a/accounts/templates/lost.html
+++ b/accounts/templates/lost.html
@@ -7,7 +7,7 @@
 		</th>
 	</tr>
 	<tr>
-	<form name="lostPass" method="post" action="{accounts_lost.FORM_LINK}">
+	<form name="lostPass" method="post" enctype="multipart/form-data" action="{accounts_lost.FORM_LINK}">
 		<td class="membersRow1">
 			<span style="float:left">{accounts_lost.EMAIL_TXT}:</span>
 			<span style="float:right"><input type="text" name="email" class="wowinput192"></span>
