--- a/trunk/accounts/templates/index.html
+++ b/trunk/accounts/templates/index.html
@@ -3,7 +3,11 @@
 <br />
 {accounts_index.BORDER_START}
 <br />
-{accounts_index.WELCOME_TXT}<br />
+{accounts_index.WELCOME_TXT}
+<br />
+<br />
 <p><a href="{accounts_index.REGISTER_LINK}">{accounts_index.REG_CLICK}</a></p>
+<p><a href="{accounts_index.APP_LINK}">{accounts_index.APP_CLICK}</a></p>
+<p><a href="{accounts_index.LOGIN_LINK}">{accounts_index.LOGIN_CLICK}</a></p>
 {accounts_index.BORDER_END}
 <!-- END accounts_index -->
