--- a/trunk/accounts/templates/login.html
+++ b/trunk/accounts/templates/login.html
@@ -22,7 +22,7 @@
 	<tr>
 		<td class="membersRow1">
 			<span style="float:left">{accounts_login.REM_TXT}</span>
-			<span style="float:right"><input type="checkbox" name="remember" value="checked"></span>
+			<span style="float:right"><input type="checkbox" name="remember"></span>
 		</td>
 	</tr>
 	<tr>
