--- a/trunk/accounts/templates/register.html
+++ b/trunk/accounts/templates/register.html
@@ -10,7 +10,7 @@
 	<form name="regForm" method="post" enctype="multipart/form-data" action="{accounts_register.FORM_LINK}">
 		<td class="membersRow1">
 			<span style="float:left">{accounts_register.UNAME_TXT}:</span>
-			<span style="float:right"><input type="text" name="user" class="wowinput128">*</span>
+			<span style="float:right"><input type="text" name="newUser" class="wowinput128">*</span>
 		</td>
 	</tr>
 	<tr>
