--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -6,8 +6,10 @@
 {accounts_index.WELCOME_TXT}
 <br />
 <br />
-<p><a href="{accounts_index.REGISTER_LINK}">{accounts_index.REG_CLICK}</a></p>
-<p><a href="{accounts_index.APP_LINK}">{accounts_index.APP_CLICK}</a></p>
+<!-- IF accounts_index.IF_APP == 0 --><p><a href="{accounts_index.REGISTER_LINK}">{accounts_index.REG_CLICK}</a></p>
+<!-- ELSE --><p><a href="{accounts_index.APP_LINK}">{accounts_index.APP_CLICK}</a></p><!-- ENDIF -->
 <p><a href="{accounts_index.LOGIN_LINK}">{accounts_index.LOGIN_CLICK}</a></p>
 {accounts_index.BORDER_END}
+<br />
+{accounts_index.RECRUIT_BOX}
 <!-- END accounts_index -->
