- calendar.css, line 69, change font text of Month Year on calendar from black to white... makes it MUCH easier to read on a dark charcoal background!

--- a/GroupCalendar/css/calendar.css
+++ b/GroupCalendar/css/calendar.css
@@ -66,7 +66,7 @@ background-color: #000000;
 **************************************************************/
 
 /**** month and year header at top of calendar ****/
-.date_header			{ font-size:16px; font-family:arial, helvetica; font-weight:bold; color:#000000; }
+.date_header			{ font-size:16px; font-family:arial, helvetica; font-weight:bold; color:#FFFFFF; }
 
 /**** color and size of calendar cells.  ****/
 .day_number {color: #FFFFFF;}
