ArmorySync - more template changes - now pre roster 2.1 beta complient...

--- a/armorysync/templates/status_body.html
+++ b/armorysync/templates/status_body.html
@@ -10,21 +10,22 @@
 									<table>
 									<tr>
 									<!-- IF CHARLIST -->
-									<td  width="10%" id="as_status_name_{body_row.ASID}" class="membersRowCell">{body_row.NAME}</td>
+									<td width="100px" style="text-align: center;" id="as_status_name_{body_row.ASID}" class="membersRowCell">{body_row.NAME}</td>
 									<!-- ENDIF -->
-									<td width="12%" id="as_status_guild_{body_row.ASID}" class="membersRowCell">{body_row.GUILD}</td>
-
-									<td width="10%" id="as_status_guild_info_{body_row.ASID}" class="membersRowCell">{body_row.GUILD_INFO}</td>
+									<td width="100px" style="text-align: center;" id="as_status_guild_{body_row.ASID}" class="membersRowCell">{body_row.GUILD}</td>
+									<!-- IF MEMBERLIST -->
+									<td width="50px" style="text-align: center;" id="as_status_guild_info_{body_row.ASID}" class="membersRowCell">{body_row.GUILD_INFO}</td>
+									<!-- ENDIF -->
 									<!-- IF CHARLIST -->
-									<td width="10%" id="as_status_character_info_{body_row.ASID}" class="membersRowCell">{body_row.CHARACTER_INFO}</td>
-									<td width="10%" id="as_status_skill_info_{body_row.ASID}" class="membersRowCell">{body_row.SKILL_INFO}</td>
-									<td width="10%" id="as_status_reputation_info_{body_row.ASID}" class="membersRowCell">{body_row.REPUTATION_INFO}</td>
-									<td width="12%" id="as_status_equipment_info_{body_row.ASID}" class="membersRowCell">{body_row.EQUIPMENT_INFO}</td>
-									<td width="8%" id="as_status_talent_info_{body_row.ASID}" class="membersRowCell">{body_row.TALENT_INFO}</td>
+									<td width="25px" style="text-align: center;" id="as_status_character_info_{body_row.ASID}" class="membersRowCell">{body_row.CHARACTER_INFO}</td>
+									<td width="25px" style="text-align: center;" id="as_status_skill_info_{body_row.ASID}" class="membersRowCell">{body_row.SKILL_INFO}</td>
+									<td width="25px" style="text-align: center;" id="as_status_reputation_info_{body_row.ASID}" class="membersRowCell">{body_row.REPUTATION_INFO}</td>
+									<td width="25px" style="text-align: center;" id="as_status_equipment_info_{body_row.ASID}" class="membersRowCell">{body_row.EQUIPMENT_INFO}</td>
+									<td width="25px" style="text-align: center;" id="as_status_talent_info_{body_row.ASID}" class="membersRowCell">{body_row.TALENT_INFO}</td>
 									<!-- ENDIF -->
-									<td width="10%" id="as_status_starttimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STARTTIMEUTC}</td>
-									<td width="10%" id="as_status_stoptimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STOPTIMEUTC}</td>
-									<td width="10%" id="as_status_log_{body_row.ASID}" class="membersRowCell">{body_row.LOG}</td>
+									<td width="100px" style="text-align: center;" id="as_status_starttimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STARTTIMEUTC}</td>
+									<td width="100px" style="text-align: center;" id="as_status_stoptimeutc_{body_row.ASID}" class="membersRowCell" width="80px">{body_row.STOPTIMEUTC}</td>
+									<td width="15px" style="text-align: center;" id="as_status_log_{body_row.ASID}" class="membersRowCell">{body_row.LOG}</td>
 									</tr>
 									<table>
 									</div>
@@ -39,6 +40,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 	
 	
 	
