--- a/armorysync/templates/status_head.html
+++ b/armorysync/templates/status_head.html
@@ -33,7 +33,7 @@
 						<table cellspacing="0" cellpadding="0" width="100%">
 							<tr>
 								<!-- BEGIN head_col -->
-									<td class="membersHeader" width="10%">{head_col.HEAD_TITLE}</td>
+									<td class="membersRowCell" style="text-align: center;" width="{head_col.HEAD_WIDTH}">{head_col.HEAD_TITLE}</td>
 								<!-- END head_col -->
 							</tr>
 						</table>
