ArmorySync - template changes added showhide to status window and tweeked some spacing from adric

--- a/armorysync/templates/status_body.html
+++ b/armorysync/templates/status_body.html
@@ -13,16 +13,16 @@
 									<!-- IF MEMBERLIST -->
 									<div style="width: 50px; text-align: center;" id="as_status_guild_info_{body_row.ASID}">{body_row.GUILD_INFO}</div>
 									<!-- ENDIF -->
-									<div style="width: 150px; text-align: center;" id="as_status_starttimeutc_{body_row.ASID}">{body_row.STARTTIMEUTC}</div>
 									<!-- IF CHARLIST -->
 									<div style="width: 50px; text-align: center;" id="as_status_character_info_{body_row.ASID}">{body_row.CHARACTER_INFO}</div>
 									<div style="width: 50px; text-align: center;" id="as_status_skill_info_{body_row.ASID}">{body_row.SKILL_INFO}</div>
 									<div style="width: 50px; text-align: center;" id="as_status_reputation_info_{body_row.ASID}">{body_row.REPUTATION_INFO}</div>
-									<div style="width: 50px; text-align: center;" id="as_status_equipment_info_{body_row.ASID}">{body_row.EQUIPMENT_INFO}</div>
+									<div style="width: 55px; text-align: center;" id="as_status_equipment_info_{body_row.ASID}">{body_row.EQUIPMENT_INFO}</div>
 									<div style="width: 50px; text-align: center;" id="as_status_talent_info_{body_row.ASID}">{body_row.TALENT_INFO}</div>
 									<!-- ENDIF -->
+									<div style="width: 150px; text-align: right;" id="as_status_starttimeutc_{body_row.ASID}">{body_row.STARTTIMEUTC}</div>
 									<div style="width: 150px; text-align: center;" id="as_status_stoptimeutc_{body_row.ASID}">{body_row.STOPTIMEUTC}</div>
-									<div style="width: 30px; text-align: right;" id="as_status_log_{body_row.ASID}">{body_row.LOG}</div>
+									<div style="width: 50px; text-align: right;" id="as_status_log_{body_row.ASID}">{body_row.LOG}</div>
 
 									</div>
 								</div>
